--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,14 +62,13 @@
 
     <RelativeLayout
         android:id="@+id/ring_rl"
-        style="@style/item_style"
-        >
+        style="@style/item_style">
 
         <TextView
             android:id="@+id/ring_tv"
             style="@style/item_text_style"
             android:layout_alignParentLeft="true"
-            android:text="铃声"/>
+            android:text="铃声" />
 
         <TextView
             android:id="@+id/arrow_two"
@@ -78,7 +77,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
-            android:background="@drawable/personal_item_arrow"/>
+            android:background="@drawable/personal_item_arrow" />
 
         <TextView
             android:id="@+id/tv_ring_value"
@@ -88,7 +87,7 @@
             android:layout_marginRight="5dp"
             android:layout_toLeftOf="@id/arrow_two"
             android:textColor="@color/black_33"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <TextView
@@ -103,6 +102,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:text="确定"/>
+        android:text="确定" />
 
 </LinearLayout>
