--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -7,5 +7,22 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.loonggg.alarmmanager.clock.Main2Activity"
     tools:showIn="@layout/activity_main2">
+<TextView
+    android:id="@+id/mess"
+    android:layout_width="368dp"
+    android:layout_height="wrap_content"
+    android:textSize="36sp"
+    />
+    <TextView
+    android:layout_width="368dp"
+    android:layout_height="1dp"
+    android:background="@color/line_and_outline_grey"
+     />
+
+
+
+
+
+
 
 </android.support.constraint.ConstraintLayout>
